--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "5d1c0f18",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "fa8e5bc7",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4                            0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "b290d9fe",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "13563d14",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "max             876.00                        71.00  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "60a76dc1",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "4             2014                10                NaN                 NaN  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "8d34e8fe",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "93b344d1",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "max              2018.00               12.00  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "10d3ae7f",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "b7221efd",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "e14d6121",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "e585c754",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "id": "396f1dde",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "id": "4b484252",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "id": "9f4833ce",
    "metadata": {},
    "outputs": [
@@ -1386,7 +1386,7 @@
        "Master                105487.0  118530.0  133080.0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "id": "256de573",
    "metadata": {},
    "outputs": [],
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "id": "792d8e92",
    "metadata": {},
    "outputs": [
@@ -1527,7 +1527,7 @@
        "11  Bachelor  89340.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "id": "b1b2094a",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1567,7 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "id": "5e5be981",
    "metadata": {},
    "outputs": [],
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "id": "c0f24c3f",
    "metadata": {},
    "outputs": [
@@ -1610,7 +1610,7 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "id": "28dba6f7",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "id": "7200ba77",
    "metadata": {},
    "outputs": [],
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "id": "82eae9d8",
    "metadata": {},
    "outputs": [],
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "id": "69637cd2",
    "metadata": {},
    "outputs": [],
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "id": "4e8fff42",
    "metadata": {},
    "outputs": [],
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "id": "4168e6d9",
    "metadata": {},
    "outputs": [],
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "id": "8b97d3e7",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "id": "5bcccbaa",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "id": "15899dec",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f005a42d",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "id": "ab158c58",
    "metadata": {},
    "outputs": [],
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "id": "1e925d32",
    "metadata": {},
    "outputs": [
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "id": "202bd5b5",
    "metadata": {},
    "outputs": [
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 34,
    "id": "51baf1b7",
    "metadata": {},
    "outputs": [
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "id": "6fc6dbbc",
    "metadata": {},
    "outputs": [
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "id": "b03c667f",
    "metadata": {},
    "outputs": [
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 37,
    "id": "84bb3b3e",
    "metadata": {},
    "outputs": [
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 38,
    "id": "5b8c70e0",
    "metadata": {},
    "outputs": [
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 39,
    "id": "e51cd259",
    "metadata": {},
    "outputs": [
@@ -2637,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 40,
    "id": "4052ac2c",
    "metadata": {},
    "outputs": [
@@ -2685,7 +2685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 41,
    "id": "a4c0ccc4",
    "metadata": {},
    "outputs": [
@@ -2725,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 44,
    "id": "0361d865",
    "metadata": {},
    "outputs": [
@@ -2742,10 +2742,10 @@
    ],
    "source": [
     "# Pregunta 4: SALARIO PROMEDIO por EDUCACIÓN\n",
-    "df_merged = pd.read_csv('df_merged_clean.csv')\n",
+    "df = pd.read_csv('data/df_merged_clean.csv')\n",
     "\n",
     "# Calcular medias + barras horizontales con confianza\n",
-    "edu_salario = df_merged.groupby('education')['salary'].agg(['mean', 'count']).reset_index()\n",
+    "edu_salario = df.groupby('education')['salary'].agg(['mean', 'count']).reset_index()\n",
     "edu_salario['mean'] = edu_salario['mean']/1000  # Miles para legibilidad\n",
     "\n",
     "plt.figure(figsize=(12,8))\n",
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "37b2494e",
    "metadata": {},
    "outputs": [
@@ -2859,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "bff12e95",
    "metadata": {},
    "outputs": [
@@ -2887,7 +2887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "6dff9d32",
    "metadata": {},
    "outputs": [
@@ -2928,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "dd557b48",
    "metadata": {},
    "outputs": [
