Fix heading for correcting negative salaries

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -1734,7 +1734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. CORREGIR SALARIOS NEGATIVOS DEL MIN\n",
+    "# 4. Corregir salarios negativos\n",
     "df[\"Salary\"] = df[\"Salary\"].abs()  # Valor absoluto, en lugar de eliminar filas"
    ]
   },
