Fix markdown formatting in analysis notebook

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -2096,7 +2096,7 @@
    "id": "7f4810f9",
    "metadata": {},
    "source": [
-    " **La mayoría de los clientes**, aproximadamente un 49%, no registraron vuelos en un mes específico\n",
+    " **La mayoría de los clientes**, aproximadamente un 49%, no registraron vuelos en un mes específico.\n",
     "Esto refleja clientes infrecuentes, en este análisis se considera usar otra métrica como **mediana**, la cual son 5 vuelos al mes. "
    ]
   },
