Update markdown explanation about null values
Clarified the explanation regarding null values in the dataset and their relevance to customer loyalty analysis.

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -1353,7 +1353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#no borro los nulos que no son relevantes o que son lógicos en mi dataset"
+    "#No borro los nulos que no son relevantes o que son lógicos en mi dataset. La columna "Cancellation Year" (y "Cancellation Month") en el dataframe de customer loyalty representa el año y mes en que un cliente canceló su membresía en el programa de fidelidad.Tiene tantos nulos porque la mayoría de clientes no han cancelado: los nulos indican clientes activos o que nunca cancelaron, lo cual es lógico."
    ]
   },
   {
