Translate comments from English to Spanish

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -1648,7 +1648,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== MISSING VALUES (%) ===\n",
+      "=== VALORES NULOS (%) ===\n",
       "                             Missing      %\n",
       "loyalty number                     0   0.00\n",
       "year                               0   0.00\n",
@@ -1680,7 +1680,7 @@
     }
    ],
    "source": [
-    "# Missing values por columna\n",
+    "# Valores nulos por columna\n",
     "print(\"=== MISSING VALUES (%) ===\")\n",
     "missing = df.isnull().sum()\n",
     "missing_pct = (missing / len(df)) * 100\n",
@@ -1753,7 +1753,7 @@
     }
    ],
    "source": [
-    "# Variables numéricas relevantes (negocio)\n",
+    "# Variables numéricas relevantes\n",
     "vars_numericas = ['total flights', 'distance', 'points accumulated', 'points redeemed', \n",
     "                  'dollar cost points redeemed', 'salary', 'clv']\n",
     "\n",
