Update print statement for missing values output

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -1681,7 +1681,7 @@
    ],
    "source": [
     "# Valores nulos por columna\n",
-    "print(\"=== MISSING VALUES (%) ===\")\n",
+    "print(\"=== VALORES NULOS (%) ===\")\n",
     "missing = df.isnull().sum()\n",
     "missing_pct = (missing / len(df)) * 100\n",
     "print(pd.DataFrame({'Missing': missing, '%': missing_pct}).round(2))\n"
