Update median flight metric in analysis

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -1774,7 +1774,7 @@
    "metadata": {},
    "source": [
     " **La mayoría de los clientes**, aproximadamente un 49%, no registraron vuelos en un mes específico\n",
-    "Esto refleja clientes infrecuentes, en este análisis se considera usar otra métrica como **mediana**, la cual son 5 vuelos al mes. "
+    "Esto refleja clientes infrecuentes, en este análisis se considera usar otra métrica como **mediana**, la cual es 1 vuelo al mes. "
    ]
   },
   {
