correcion ultimos errores

--- a/Analisis_Loyalty.ipynb
+++ b/Analisis_Loyalty.ipynb
@@ -1148,13 +1148,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "396f1dde",
+   "cell_type": "markdown",
+   "id": "9bc2d4b5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# un left para mantener todas las observaciones de actividad de vuelo y añadirle la información de perfil del cliente"
+    "### Un left para mantener todas las observaciones de actividad de vuelo y añadirle la información de perfil del cliente"
    ]
   },
   {
@@ -1262,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1e8d05e9",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1286,7 @@
     "salary_means = df.groupby(\"Education\")[\"Salary\"].transform(\"mean\")\n",
     "df[\"Salary\"] = df[\"Salary\"].fillna(salary_means)\n",
     "\n",
-    "# 2. Luego, si aún hay nulos (por ejemplo College), imputar con media global\n",
+    "# 2. Luego, si aún hay nulos (he comprobado que en College), imputar con media global\n",
     "global_mean = df[\"Salary\"].mean()\n",
     "df.loc[df[\"Salary\"].isna(), \"Salary\"] = global_mean\n",
     "\n",
@@ -1347,13 +1345,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7200ba77",
+   "cell_type": "markdown",
+   "id": "3a9c4131",
    "metadata": {},
-   "outputs": [],
    "source": [
-    " # No borro los nulos que no son relevantes o que son lógicos en mi dataset. La columna Cancellation Year en el dataframe de customer loyalty representa el año y mes en que un cliente canceló su membresía en el programa de fidelidad.Tiene tantos nulos porque la mayoría de clientes no han cancelado: los nulos indican clientes activos o que nunca cancelaron, lo cual es lógico."
+    "#### No borro los nulos que no son relevantes o que son lógicos en mi dataset. La columna **Cancellation Year** y **Cancelation Month** en el dataframe de customer loyalty representa el año y mes en que un cliente canceló su membresía en el programa de fidelidad.Tiene tantos nulos porque la **mayoría de clientes no han cancelado**: los nulos indican clientes activos o que nunca cancelaron, lo cual es lógico."
    ]
   },
   {
@@ -1689,14 +1685,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440466fe",
-   "metadata": {},
-   "source": [
-    "Estos nulos son lógicos en nuestro análisis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "224d01f3",
    "metadata": {},
    "source": [
@@ -1713,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "51baf1b7",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1741,7 @@
     }
    ],
    "source": [
-    "# Variables numéricas relevantes\n",
+    "# Variables numéricas de relevancia para nuestro análisis\n",
     "vars_numericas = ['total flights', 'distance', 'points accumulated', 'points redeemed', \n",
     "                  'dollar cost points redeemed', 'salary', 'clv']\n",
     "\n",
@@ -1761,7 +1749,7 @@
     "stats = df[vars_numericas].describe(include='all').round(2)\n",
     "print(stats)\n",
     "\n",
-    "# Moda (valor más frecuente)\n",
+    "# Moda \n",
     "print(\" MODA:\")\n",
     "for col in vars_numericas:\n",
     "    moda = df[col].mode()\n",
@@ -1960,24 +1948,24 @@
    "source": [
     "- **Correlaciones fuertes** (>0.7):\n",
     "\n",
-    "    - Total Flights y Flights Booked (0,96): Los clientes que vuelan más tienden a reservar más vuelos.\n",
-    "    - Total Flights y distancia (0.78): Los clientes que vuelan más tienden a cubrir mayores distancias.\n",
-    "    - Points Accumulated y Total Flights (0.77): Los clientes que vuelan más acumulan más puntos.\n",
-    "    - Points Accumulated y Distance (0.99): Los clientes que cubren mayores distancias acumulan más puntos.\n",
+    "    - **Total Flights y Flights Booked** (0,96): Los clientes que vuelan más tienden a reservar más vuelos.\n",
+    "    - **Total Flights y distancia** (0.78): Los clientes que vuelan más tienden a cubrir mayores distancias.\n",
+    "    - **Points Accumulated y Total Flights** (0.77): Los clientes que vuelan más acumulan más puntos.\n",
+    "    - **Points Accumulated y Distance** (0.99): Los clientes que cubren mayores distancias acumulan más puntos.\n",
     "\n",
     "- **Correlaciones medias** (0.5-0.7):\n",
     "\n",
-    "    - Flights booked y fligths with companions (0,50): Los clientes que reservan más vuelos tienden a viajar con acompañantes.\n",
-    "    - Flights with companions y distance (0.52): Los clientes que viajan con acompañantes tienden a cubrir mayores distancias.\n",
-    "    - Flithts with companions y points accumulated (0.51): Los clientes que viajan con acompañantes tienden a acumular más puntos.\n",
+    "    - **Flights booked y fligths with companions** (0,50): Los clientes que reservan más vuelos tienden a viajar con acompañantes.\n",
+    "    - **Flights with companions y distance** (0.52): Los clientes que viajan con acompañantes tienden a cubrir mayores distancias.\n",
+    "    - **Flithts with companions y points accumulated** (0.51): Los clientes que viajan con acompañantes tienden a acumular más puntos.\n",
     "\n",
     "- **Correlaciones débiles** (<0.5 o >-0.5):\n",
     "\n",
-    "    - Flights with companions y points redeemed (0.33): Existe una correlación positiva débil entre viajar con acompañantes y los puntos canjeados.\n",
-    "    - Total flights y Points Redeemed (0.26): Existe una correlación positiva débil entre el número total de vuelos y los puntos canjeados.\n",
-    "    - Distance y Points Redeemed (0.22): Existe una correlación positiva débil entre la distancia y los puntos canjeados. \n",
-    "    - Points Accumulated y Points Redeemed (0.22): Existe una correlación positiva débil entre los puntos acumulados y los puntos canjeados.\n",
-    "    - Flights Booked y Points Redeemed (0.19): Existe una correlación positiva débil entre los vuelos reservados y los puntos canjeados."
+    "    - **Flights with companions y points redeemed** (0.33): Existe una correlación positiva débil entre viajar con acompañantes y los puntos canjeados.\n",
+    "    - **Total flights y Points Redeemed** (0.26): Existe una correlación positiva débil entre el número total de vuelos y los puntos canjeados.\n",
+    "    - **Distance y Points Redeemed** (0.22): Existe una correlación positiva débil entre la distancia y los puntos canjeados. \n",
+    "    - **Points Accumulated y Points Redeemed** (0.22): Existe una correlación positiva débil entre los puntos acumulados y los puntos canjeados.\n",
+    "    - **Flights Booked y Points Redeemed** (0.19): Existe una correlación positiva débil entre los vuelos reservados y los puntos canjeados."
    ]
   },
   {
@@ -1990,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5b8c70e0",
    "metadata": {},
    "outputs": [
@@ -2200,9 +2188,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Cargar datasets limpios (ajusta nombres)\n",
-    "df_flights = pd.read_csv('customer_flight_activity_clean.csv')  # Tu versión limpia\n",
-    "df_loyalty = pd.read_csv('customer_loyalty_history_clean.csv')  # Tu versión limpia\n",
+    "# Cargar datasets limpios\n",
+    "df_flights = pd.read_csv('customer_flight_activity_clean.csv')  \n",
+    "df_loyalty = pd.read_csv('customer_loyalty_history_clean.csv')  \n",
     "\n",
     "# === 1. FRECUENCIAS LOYALTY ===\n",
     "cat_loyalty = ['province', 'education', 'marital status', 'loyalty card', 'gender']\n",
@@ -2219,7 +2207,7 @@
     "    plt.show()\n",
     "\n",
     "# === 2. FRECUENCIAS FLIGHTS ===\n",
-    "cat_flights = ['year', 'month']  # Si están separadas\n",
+    "cat_flights = ['year', 'month'] \n",
     "for var in cat_flights:\n",
     "    if var in df_flights.columns:\n",
     "        print(f\"\\n{var.upper()}:\")\n",
@@ -2314,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "4052ac2c",
    "metadata": {},
    "outputs": [
@@ -2330,10 +2318,9 @@
     }
    ],
    "source": [
-    "# Pregunta 2: DISTANCIA vs PUNTOS (PUNTOS + LÍNEA)\n",
+    "# Pregunta 2: DISTANCIA vs PUNTOS\n",
     "df_flights = pd.read_csv('customer_flight_activity_clean.csv')\n",
     "\n",
-    "# 4 bins simples\n",
     "df_flights['dist_bin'] = pd.cut(df_flights['distance'], bins=4, labels=['0-5k km', '5k-10k', '10k-15k', '15k+'])\n",
     "puntos_bin = df_flights.groupby('dist_bin')['points accumulated'].mean()\n",
     "\n",
